--- a/src/sass/utils/_placeholder.scss
+++ b/src/sass/utils/_placeholder.scss
@@ -1,13 +1,22 @@
+%section {
+    // padding-top: 84px;
+    padding-bottom: 60px;
+    @include mq(tablet) {
+        padding-bottom: 100px;
+    }
+}
+
 %section-title {
 	margin-bottom: 32px;
 	text-align: left;
     font-family: var(--secondary-font);
+    text-transform: uppercase;
 
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 14px;
 
-	@include fonts($fw: 700, $fs: 24px, $lh: 1.2, $color: var(--main-text-color));
+	@include fonts($fw: 700, $fs: 24px, $lh: 1.2, $color: var(--main-text-cl));
 
     &::after {
         content: '';
@@ -16,12 +25,13 @@
         width: 100%;
         height: 1px;
     
-        background-color: var(--main-text-color);
+        background-color: var(--main-text-cl);
     }
 
     @include mq(tablet) {
         margin-bottom: 60px;
         font-size: 44px;
+        gap: 16px;
     }
 
     @include mq(desktop) {
@@ -30,7 +40,4 @@
 
 }
 
-// %section {
-//     padding-top: 84px;
-//     padding-bottom: 84px;
-// }
+
