adds btn styles

--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -5,7 +5,7 @@
     min-width: 208px;
     min-height: 44px;
     padding: 10px 35px;
-    background-color: #E86F54;;
+    background-color: #E86F54;
   
 	@include fonts($fw: 500, $fs: 20px, $lh: 0.857, $color: var(--white-cl));
 
