--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -11,7 +11,7 @@
 
     /* btn colors */
 
-    --default-btn-cl: #E86F54;;
+    --default-btn-cl: #E86F54;
 	--hover-btn-cl: #E25B41;
     --focus-btn-cl: #FA6F54;
 
