--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -11,9 +11,9 @@
       />
     </div>
     <button class="hero__btn" type="button">
-      <!-- <svg class="hero__btn-svg" width="64" height="76">
-        <use href=""></use>
-      </svg> -->
+      <svg class="" width="" height="">
+        <use href="./images/symbol-defs.svg#icon-btn-hero"></use>
+      </svg>
     </button>
   </div>
 </section>
