--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,5 +1,5 @@
 <section class="section hero">
-  <div class="conteiner hero">
+  <div class="container">
     <h1 class="hero__title">ANEMONE</h1>
     <h2 class="hero__mintitle">flower studio</h2>
     <div class="hero__img">
