modal delivey blog

--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -20,7 +20,15 @@
         <span class="delivery-number">4</span>Make someone happy or enjoy
         yourself
       </li>
-      <img src="" alt="" />
     </ul>
   </div>
+  <img
+    srcset="
+      ./images/delivery/del-dt@1x.jpg 1x,
+      ./images/delivery/del-dt@2x.jpg 2x
+    "
+    src="./images/delivery/del-dt@1x.jpg"
+    alt=""
+    class="delivery-foto"
+  />
 </section>
