mobile-menu and header

--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -7,7 +7,7 @@
     /* Text colors */
 	--main-text-cl: #000000;
 	--white-cl: #ffffff;
-    --secondary-text-cl: rgba(0, 0, 0, 0.6)
+    --secondary-text-cl: rgba(0, 0, 0, 0.6);
 
     /* btn colors */
 
