add burger animation

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -31,5 +31,7 @@
 @import './components/modal-subscribe';
 @import './components/modal-thank-you';
 @import './components/mobile-menu';
+@import './components/hamburger';
+// @import 'path/to/hamburgers';
 
 // @import './example';
