--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,10 +1,10 @@
 <div class="mobile-menu js-menu-container" id="mobile-menu">
-    <button type="button" class="mobile-menu__btn js-close-menu"
+    <!-- <button type="button" class="mobile-menu__btn js-close-menu"
     >
         <svg class="close__icon" width="24" height="24" aria-label="перемикач мобільного меню" stroke="currentColor">
             <use href="./images/symbol-defs.svg#icon-close"></use>
         </svg>
-    </button>
+    </button> -->
     <ul class="mobile-menu__list list">
         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link--current">Anemone</a></li>
         <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">About us</a></li>
