--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,7 @@
 
 .header {
     padding-top: 16px;
-
+    position: relative;
 }
 
 .logo__icon {
@@ -36,11 +36,10 @@
 }
 
 .header__icon {
-    width: 22px;
-    height: 22px;
+    width: 25px;
+    height: 25px;
     margin-left: auto;
-
-
+    margin-right: 22px;
 }
 
 .navigation {
