--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -1,3 +1,5 @@
+
+
 .mobile-menu {
     position: fixed;
 	top: 0;
@@ -10,6 +12,7 @@
 	display: flex;
 	flex-direction: column;
     transform: translateX(-150%);
+    z-index: 9;
 
 	transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -19,29 +22,40 @@
 }
 
 .mobile-menu__btn {
-	min-height: 12px;
-	min-width: 12px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-    color: var(--white-cl);
-
-	margin-left: auto;
-	padding: 0;
+    position: absolute;
+    top: 22px;
+    right: 22px;
+    padding: 0;
 	background-color: transparent;
 	cursor: pointer;
 	border: none;
+    z-index: 999;
 
-	&.js-close-menu {
-		position: absolute;
-		top: 16px;
-		right: 16px;
-	}
-
-	@media (min-width: 768px) {
-		display: none;
-	}
 }
+// .mobile-menu__btn {
+// 	min-height: 12px;
+// 	min-width: 12px;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+//     color: var(--white-cl);
+
+// 	margin-left: auto;
+// 	padding: 0;
+// 	background-color: transparent;
+// 	cursor: pointer;
+// 	border: none;
+
+// 	&.js-close-menu {
+// 		position: absolute;
+// 		top: 16px;
+// 		right: 16px;
+// 	}
+
+// 	@media (min-width: 768px) {
+// 		display: none;
+// 	}
+// }
 .mobile-menu__list {
     margin: auto;
     display: flex;
