blog delivery chenge

--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -1,24 +1,36 @@
-<section class="blog section about">
+<section class="blog section about" id="blog">
   <div class="container">
     <h2 class="subtitle">BLOG</h2>
     <div class="blog-wrapper-foto">
       <img
         class="blog-foto"
-        srcset="./images/blog/dt/blog2-dt@1x.jpg x1, ./images/blog/dt/blog2-dt@2x.jpg 2x"
+        srcset="
+          ./images/blog/dt/blog2-dt@1x.jpg  1x,
+          ./images/blog/dt/blog2-dt@2x.jpg  2x,
+          ./images/blog/dt/blog2-dt-1x.webp 1x,
+          ./images/blog/dt/blog2-dt-2x.webp 2x
+        "
         src="./images/blog/dt/blog2-dt@1x.jpg"
         alt=""
       />
       <img
         class="blog-foto"
-        srcset="./images/blog/dt/blog1-dt@1x.jpg x1, ./images/blog/dt/blog1-dt@2x.jpg 2x"
+        srcset="
+          ./images/blog/dt/blog1-dt@1x.jpg  1x,
+          ./images/blog/dt/blog1-dt@2x.jpg  2x,
+          ./images/blog/dt/dlog1-dt-1x.webp 1x,
+          ./images/blog/dt/dlog1-dt-2x.webp 2x
+        "
         src="./images/blog/dt/blog1-dt@1x.jpg"
         alt=""
       />
       <img
         class="blog-foto"
         srcset="
-          ./images/blog/dt/blog3-dt@1x.jpg 1x,
-          ./images/blog/dt/blog3-dt@2x.jpg 2x
+          ./images/blog/dt/blog3-dt@1x.jpg  1x,
+          ./images/blog/dt/blog3-dt@2x.jpg  2x,
+          ./images/blog/dt/blog3-dt-1x.webp 1x,
+          ./images/blog/dt/blog3-dt-2x.webp 2x
         "
         src="./images/blog/dt/blog3-dt@1x.jpg"
         alt=""
