--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -1,4 +1,4 @@
-<section class="section about delivery">
+<section class="section about delivery" id="delivery">
   <div class="container">
     <h2 class="subtitle">DELIVERY</h2>
     <ul class="delivery-list">
