add section store

--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -1,5 +1,244 @@
-<section class="section store">
-    <div class="container">
-        <button type="button" class="btn">Order flowers</button>
-    </div>
+<section class="section store" id="store">
+  <div class="container">
+    <h2 class="store__title">STORE</h2>
+    <ul class="store__list list">
+      <li class="store__item">
+        <div class="store__card">
+          <picture>
+            <source
+              srcset="
+                ./images/store/mb/store15$-mb@1x.jpg 1x,
+                ./images/store/mb/store15$-mb@2x.jpg 2x
+              "
+              media="(max-width:767.98px)"
+            />
+            <source
+              srcset="
+                ./images/store/mb/store15$-mb@1x.webp 1x,
+                ./images/store/mb/store15$-mb@2x.webp 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store15$-tb@2x.jpg 1x,
+                ./images/store/tb/store15$-tb@2x.jpg 2x
+              "
+              media="(max-width:1279.98px)"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store15$-tb@1x.webp 1x,
+                ./images/store/tb/store15$-tb@2x.webp 2x
+              "
+              media="(max-width:1279.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store15$-dt@1x.jpg 1x,
+                ./images/store/dt/store15$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store15$-dt@1x.webp 1x,
+                ./images/store/dt/store15$-dt@2x.webp 2x
+              "
+              media="(min-width:1280px)"
+              type="image/webp"
+            />
+
+            <img
+              src="./images/store/tb/store15$-tb@1x.jpg"
+              alt="flower from compliment"
+              class="store__img"
+            />
+          </picture>
+          <h3 class="store__title__item">compliments</h3>
+          <p class="store__item__price">from $15</p>
+        </div>
+      </li>
+      <li class="store__item">
+        <div class="store__card">
+          <picture>
+            <source
+              srcset="
+                ./images/store/mb/store25$-mb@1x.jpg 1x,
+                ./images/store/mb/store25$-mb@2x.jpg 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/jpg"
+            />
+            <source
+              srcset="
+                ./images/store/mb/store25$-mb@1x.webp 1x,
+                ./images/store/mb/store25$-mb@2x.webp 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store25$-tb@1x.jpg 1x,
+                ./images/store/tb/store25$-tb@2x.jpg 2x
+              "
+              media="(max-width:1279.98px)"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store25$-tb@1x.webp 1x,
+                ./images/store/tb/store25$-tb@2x.webp 2x
+              "
+              media="(max-width:1279.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store25$-dt@1x.jpg 1x,
+                ./images/store/dt/store25$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store25$-dt@1x.webp 1x,
+                ./images/store/dt/store25$-dt@2x.webp 2x
+              "
+              media="(min-width:1280px)"
+              type="image/webp"
+            />
+            <img
+              src="./images/store/tb/store25$-tb@1x.jpg"
+              alt="small bouquets"
+              class="store__img"
+            />
+          </picture>
+          <h3 class="store__title__item">bouquets size S</h3>
+          <p class="store__item__price">from $25</p>
+        </div>
+      </li>
+      <li class="store__item">
+        <div class="store__card">
+          <picture>
+            <source
+              srcset="
+                ./images/store/mb/store45$-mb@1x.jpg 1x,
+                ./images/store/mb/store45$-mb@2x.jpg 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/jpg"
+            />
+            <source
+              srcset="
+                ./images/store/mb/store45$-mb@1x.webp 1x,
+                ./images/store/mb/store45$-mb@2x.webp 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store45$-tb@1x.jpg 1x,
+                ./images/store/tb/store45$-tb@2x.jpg 2x
+              "
+              media="(max-width:1279.98px)"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store45$-tb@1x.webp 1x,
+                ./images/store/tb/store45$-tb@2x.webp 2x
+              "
+              media="(max-width:1279.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store45$-dt@1x.jpg 1x,
+                ./images/store/dt/store45$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store45$-dt@1x.webp 1x,
+                ./images/store/dt/store45$-dt@2x.webp 2x
+              "
+              media="(min-width:1280px)"
+              type="image/webp"
+            />
+            <img
+              src="./images/store/tb/store45$-tb@1x.jpg"
+              alt="midle bouquets"
+              class="store__img"
+            />
+          </picture>
+          <h3 class="store__title__item">bouquets size M</h3>
+          <p class="store__item__price">from $45</p>
+        </div>
+      </li>
+      <li class="store__item">
+        <div class="store__card">
+          <picture>
+            <source
+              srcset="
+                ./images/store/mb/store60$-mb@1x.jpg 1x,
+                ./images/store/mb/store60$-mb@2x.jpg 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/jpg"
+            />
+            <source
+              srcset="
+                ./images/store/mb/store60$-mb@1x.webp 1x,
+                ./images/store/mb/store60$-mb@2x.webp 2x
+              "
+              media="(max-width:767.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store60$-tb@1x.jpg 1x,
+                ./images/store/tb/store60$-tb@2x.jpg 2x
+              "
+              media="(max-width:1279.98px)"
+            />
+            <source
+              srcset="
+                ./images/store/tb/store60$-tb@1x.webp 1x,
+                ./images/store/tb/store60$-tb@2x.webp 2x
+              "
+              media="(max-width:1279.98px)"
+              type="image/webp"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store60$-dt@1x.jpg 1x,
+                ./images/store/dt/store60$-dt@2x.jpg 2x
+              "
+              media="(min-width:1280px)"
+            />
+            <source
+              srcset="
+                ./images/store/dt/store60$-dt@1x.webp 1x,
+                ./images/store/dt/store60$-dt@2x.webp 2x
+              "
+              media="(min-width:1280px)"
+              type="image/webp"
+            />
+            <img
+              src="./images/store/tb/store60$-tb@1x.jpg"
+              alt="large bouquets"
+              class="store__img"
+            />
+          </picture>
+          <h3 class="store__title__item">bouquets size L</h3>
+          <p class="store__item__price">from $60</p>
+        </div>
+      </li>
+    </ul>
+    <button type="button" class="btn">Order flowers</button>
+  </div>
 </section>
