--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="section about">
+<section class="section about" id="about-us">
     <div class="container">
         <h2 class="subtitle">about</h2>
     </div>
