--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -11,10 +11,10 @@
           <li class="nav__item">
             <a href="./index.html" class="nav__link">Anemone</a>
           </li>
-          <li class="nav__item"><a href="#" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Store</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Delivery</a></li>
-          <li class="nav__item"><a href="#" class="nav__link">Blog</a></li>
+          <li class="nav__item"><a href="#about-us" class="nav__link">About us</a></li>
+          <li class="nav__item"><a href="#store" class="nav__link">Store</a></li>
+          <li class="nav__item"><a href="#delivery" class="nav__link">Delivery</a></li>
+          <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
         </ul>
       </nav>
       <a href="tel:+380961111111" class="header__link">
@@ -43,3 +43,7 @@
                     <use href="./images/symbol-defs.svg#icon-Burger"></use>
                 </svg>
             </button> -->
+            <!-- id="about-us"
+            id="store"
+            id="delivery"
+            id="blog" -->
