--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -6,11 +6,11 @@
         </svg>
     </button> -->
     <ul class="mobile-menu__list list">
-        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link mobile-menu__link--current">Anemone</a></li>
-        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">About us</a></li>
-        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Store</a></li>
-        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Delivery</a></li>
-        <li class="mobile-menu__item"><a href="#" class="mobile-menu__link">Blog</a></li>
+        <li class="mobile-menu__item"><a href="./index.html" class="mobile-menu__link mobile-menu__link--current">Anemone</a></li>
+        <li class="mobile-menu__item"><a href="#about-us" class="mobile-menu__link">About us</a></li>
+        <li class="mobile-menu__item"><a href="#store" class="mobile-menu__link">Store</a></li>
+        <li class="mobile-menu__item"><a href="#delivery" class="mobile-menu__link">Delivery</a></li>
+        <li class="mobile-menu__item"><a href="#blog" class="mobile-menu__link">Blog</a></li>
 
     </ul>
 
