--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,7 +1,7 @@
 
 .header {
     padding-top: 16px;
-    position: relative;
+
 }
 
 .logo__icon {
@@ -18,6 +18,8 @@
 
 
 .header__wrapper {
+    position: relative;
+    width: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
@@ -39,7 +41,7 @@
     width: 25px;
     height: 25px;
     margin-left: auto;
-    margin-right: 22px;
+    margin-right: 40px;
 }
 
 .navigation {
