--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -6,6 +6,7 @@
 	left: 0;
     width: 100vw;
     height: 100vh;
+
     background-color: var(--default-btn-cl);
     color: var(--white-cl);
     z-index: 999;
@@ -23,8 +24,8 @@
 
 .mobile-menu__btn {
     position: absolute;
-    top: 22px;
-    right: 22px;
+    top: 2px;
+    right: 0;
     padding: 0;
 	background-color: transparent;
 	cursor: pointer;
