--- a/src/partials/store.html
+++ b/src/partials/store.html
@@ -1,6 +1,6 @@
 <section class="section store" id="store">
   <div class="container">
-    <h2 class="store__title">STORE</h2>
+    <h2 class="subtitle store__title">STORE</h2>
     <ul class="store__list list">
       <li class="store__item">
         <div class="store__card">
