--- a/src/partials/delivery.html
+++ b/src/partials/delivery.html
@@ -31,4 +31,11 @@
     alt=""
     class="delivery-foto"
   />
+  <source
+    srcset="
+      ./images/delivery/del-dt@1x.jpg 1x,
+      ./images/delivery/del-dt@2x.jpg 2x
+    "
+    media="(max-width:767.98)"
+  />
 </section>
