--- a/src/partials/modal-subscribe.html
+++ b/src/partials/modal-subscribe.html
@@ -1,14 +1,58 @@
 <div class="modal-subscribe">
   <div class="modal-subscribe-wrapper">
     <img
+      srcset="
+        ./images/modal(subscribe)/sub-mb@1x.jpg 1x,
+        ./images/modal(subscribe)/sub-mb@2x.jpg 2x
+      "
+      class="modal-subscribe-foto1"
+    />
+    <!-- <img
+      srcset="
+        ./images/modal(subscribe)/sub-mb@1x.webp 1x,
+        ./images/modal(subscribe)/sub-mb@2x.webp 2x
+      "
+      media="(min-width:320px)"
+      type="image/webp"
+      class="modal-subscribe-foto1web"
+    /> -->
+    <img
+      srcset="
+        ./images/modal(subscribe)/sub-tb@1x.jpg 1x,
+        ./images/modal(subscribe)/sub-tb@2x.jpg 2x
+      "
+      class="modal-subscribe-foto2"
+    />
+    <!-- <img
+      srcset="
+        ./images/modal(subscribe)/sub-tb@1x.webp 1x,
+        ./images/modal(subscribe)/sub-tb@2x.webp 2x
+      "
+      media="(min-width:768px)"
+      type="image/webp"
       class="modal-subscribe-foto"
+    /> -->
+    <img
       srcset="
         ./images/modal(subscribe)/sub-dt@1x.jpg 1x,
         ./images/modal(subscribe)/sub-dt@2x.jpg 2x
       "
+      class="modal-subscribe-foto3"
+    />
+    <!-- <img
+      srcset="
+        ./images/modal(subscribe)/sub-dt@1x.webp 1x,
+        ./images/modal(subscribe)/sub-dt@2x.webp 2x
+      "
+      media="(min-width:1280px)"
+      type="image/webp"
+      class="modal-subscribe-foto"
+    /> -->
+    <!-- <img
+      class="modal-subscribe-foto"
       src="./images/modal(subscribe)/sub-dt@1x.jpg"
       alt=""
-    />
+    /> -->
     <div class="modal-subscribe-information-wrapper">
       <h3 class="backdrop-modal-blog-title">Follow to our newsletter</h3>
       <p class="backdrop-modal-blog-text">
