add page up scroll adn metateg OG

--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -32,6 +32,7 @@
 @import './components/modal-thank-you';
 @import './components/mobile-menu';
 @import './components/hamburger';
-// @import 'path/to/hamburgers';
+@import './components/up-button';
+
 
 // @import './example';
