--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="up">
   <div class="container">
     <div class="header__wrapper">
       <a href="./index.html" class="logo">
