--- a/src/partials/blog.html
+++ b/src/partials/blog.html
@@ -2,7 +2,17 @@
   <div class="container">
     <h2 class="subtitle">BLOG</h2>
     <div class="blog-wrapper-foto">
-      <img
+      <picture>
+        <source srcset="
+        ./images/blog/dt/blog2-dt@1x.jpg 1x,
+        ./images/blog/dt/blog2-dt@2x.jpg 2x,
+        ./images/blog/dt/blog2-dt-1x.webp 1x,
+        ./images/blog/dt/blog2-dt-2x.webp 2x
+        " 
+        type="image/webp"/>
+        <img src="./images/blog/dt/blog2-dt@1x.jpg" alt="" />
+      </picture>
+      <!-- <img
         class="blog-foto"
         srcset="
           ./images/blog/dt/blog2-dt@1x.jpg  1x,
@@ -35,7 +45,7 @@
         src="./images/blog/dt/blog3-dt@1x.jpg"
         alt=""
       />
-    </div>
+    </div> -->
     <p class="blog-text-follow">Follow to our newsletter</p>
     <button class="btn blog-btn">Subscribe</button>
   </div>
