--- a/src/sass/components/_modal-subscribe.scss
+++ b/src/sass/components/_modal-subscribe.scss
@@ -28,6 +28,7 @@
     width: 860px;
   }
   background-color: var(--white-cl);
+  position: relative;
 }
 
 .modal-subscribe-information-wrapper {
@@ -49,7 +50,6 @@
   }
   @include mq(desktop) {
     margin-left: 40px;
-    padding-right: 40px;
     padding-bottom: 0;
   }
 }
@@ -59,10 +59,16 @@
   @include mq(phone) {
     @include fonts($fw: 600, $fs: 18px, $lh: 1.2, $color: var(--main-text-cl));
     margin-bottom: 14px;
+    margin-top: 18px;
   }
   @include mq(tablet) {
     @include fonts($fw: 600, $fs: 27px, $lh: 1.2, $color: var(--main-text-cl));
     margin-bottom: 24px;
+    margin-top: 28px;
+  }
+  @include mq(desktop) {
+    @include fonts($fw: 600, $fs: 27px, $lh: 1.2, $color: var(--main-text-cl));
+    margin-top: 0;
   }
 }
 
@@ -121,42 +127,7 @@
   }
 }
 
-.modal-subscribe-foto1 {
-  @media screen and (min-width: 320px) {
-    display: block;
-    width: 272px;
-    height: 121px;
-    margin-bottom: 18px;
-  }
-  @media screen and (min-width: 767px) {
-    display: none;
-  }
-}
-
-.modal-subscribe-foto2 {
-  display: none;
-  @media screen and (min-width: 767px) {
-    width: 588px;
-    height: 271px;
-    margin-bottom: 28px;
-    display: block;
-  }
-  @media screen and (min-width: 1279px) {
-    display: none;
-  }
-}
-
-.modal-subscribe-foto3 {
-  display: none;
-  @media screen and (min-width: 1279px) {
-    width: 428px;
-    height: 528px;
-    margin: 0;
-    display: block;
-  }
-}
-
-.btn-madal-subscribe {
+.btn-modal-subscribe {
   @include fonts($fw: 600, $fs: 18px, $lh: 1.2, $color: var(--white-cl));
   border-radius: 8px;
   display: flex;
@@ -192,4 +163,36 @@
   @include mq(tablet) {
     @include fonts($fw: 500, $fs: 14px, $lh: 1.2, $color: #5c5c5c);
   }
+}
+
+.modal-subscribe-icon-button-close {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  background-color: transparent;
+  border: none;
+  @include mq(phone) {
+    top: 14px;
+    right: 14px;
+  }
+  @include mq(tablet) {
+    top: 24px;
+    right: 24px;
+  }
+}
+
+.modal-subscribe-icon-close {
+  stroke: var(--main-text-cl);
+  @include mq(phone) {
+    width: 18px;
+    height: 18px;
+  }
+  @include mq(tablet) {
+    width: 24px;
+    height: 24px;
+  }
+}
+
+.modal-subscribe {
+  display: none;
 }
