--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,1 +1,167 @@
 //   Зверни увагу:  font-family: var(--secondary-font);
+// .footer {
+//   padding-top: 60px;
+//   padding-bottom: 60px;
+//   font-style: normal;
+//   background-color: $background-color;
+//   color: $body-color;
+//   @media screen and (min-width: 768px) {
+//     padding: 60px 0px;
+//   }
+// }
+// .contact-footer {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   @media screen and (min-width: 768px) {
+//       align-items: flex-start;
+//     justify-content: flex-start;
+//   }
+// }
+// .contact-footer__address {
+//   display: flex;
+//   flex-direction: column;
+//   align-items: center;
+//   margin-top: 20px;
+//   margin-bottom: 60px;
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: flex-start;
+//     margin-top: 20px;
+//   }
+// }
+// .contact-footer__map {
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: 400;
+//   font-size: 14px;
+//   line-height: calc(24 / 14);
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   color: $primary-white-color;
+//   @media screen and (min-width: 768px) {
+//     width: 231px;
+//     height: 21px;
+//   }
+// }
+// .contact-footer__link {
+//   color: $color-contact;
+//   // @media screen and (min-width: 768px) {
+//   //   color: $color-contact;
+//   //   font-family: "Roboto";
+//   //   font-style: normal;
+//   //   font-weight: 400;
+//   //   font-size: 14px;
+//   //   width: 231px;
+//   //   height: 21px;
+//   //   line-height: 1.71;
+//   //   letter-spacing: 0.03em;
+//   // }
+// }
+// .contact-footer__list {
+//   margin-bottom: 8px;
+//   @media screen and (min-width: 768px) {
+//     margin-bottom: 9px;
+//   }
+// }
+// .socials-footer__title {
+//   font-family: 'Roboto';
+//   font-style: normal;
+//   font-weight: 700;
+//   font-size: 14px;
+//   line-height: calc(16 / 14);
+//   text-align: center;
+//   letter-spacing: 0.03em;
+//   text-transform: uppercase;
+//   color: $primary-white-color;
+// }
+// .container__footer {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     align-items: baseline;
+//     flex-direction: row;
+//   }
+// }
+// .socials-footer {
+//   margin-bottom: 60px;
+//   @media screen and (min-width: 768px) {
+//     margin-left: 60px;
+//   }
+// }
+// .socials-footer__item {
+//   @media screen and (min-width: 768px) {
+//     margin-top: 20px;
+//   }
+// }
+// .socials-footer__styles {
+//   @media screen and (min-width: 768px) {
+//     background-color: $socials-bg;
+//     border-radius: 50%;
+//     fill: $primary-white-color;
+//   }
+// }
+// .subscription {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     margin-left: auto;
+//   }
+// }
+// .subscription__input {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     font-family: 'Roboto';
+//     font-style: normal;
+//     font-weight: 400;
+//     font-size: 16px;
+//     line-height: calc(20 / 16);
+//     align-items: center;
+//     letter-spacing: 0.03em;
+//     color: $primary-white-color;
+//     background-color: transparent;
+//     width: 358px;
+//     height: 50px;
+//     border: 1px solid rgba(255, 255, 255, 0.3);
+//     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+//     border-radius: 4px;
+//     padding-left: 16px;
+//     padding-top: 15px;
+//     padding-bottom: 15px;
+//   }
+// }
+// .subscription__btn {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     font-family: 'Roboto';
+//     font-style: normal;
+//     font-weight: 500;
+//     font-size: 16px;
+//     line-height: calc(26 / 16);
+//     text-align: center;
+//     letter-spacing: 0.03em;
+//     color: $primary-white-color;
+//     border: 0px solid $accent-color;
+//     background-color: $accent-color;
+//     border-radius: 4px;
+//     padding-top: 10px;
+//     padding-left: 32px;
+//     padding-right: 32px;
+//     padding-bottom: 10px;
+//     margin-left: 12px;
+//     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+//   }
+// }
+// .subscription__icon {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     margin-left: 10px;
+//     fill: $primary-white-color;
+//   }
+// }
+// .subscription__label {
+//   @media screen and (min-width: 768px) {
+//     display: flex;
+//     align-items: center;
+//     margin-top: 20px;
+//   }
+// }
