add close mob menu

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,49 +1,43 @@
 <header class="header" id="up">
-  <div class="container">
-    <div class="header__wrapper">
-      <a href="./index.html" class="logo">
-        <svg class="logo__icon">
-          <use href="./images/symbol-defs.svg#icon-Logo"></use>
-        </svg>
-      </a>
-      <nav class="navigation">
-        <ul class="nav__list list">
-          <li class="nav__item">
-            <a href="./index.html" class="nav__link">Anemone</a>
-          </li>
-          <li class="nav__item"><a href="#about-us" class="nav__link">About us</a></li>
-          <li class="nav__item"><a href="#store" class="nav__link">Store</a></li>
-          <li class="nav__item"><a href="#delivery" class="nav__link">Delivery</a></li>
-          <li class="nav__item"><a href="#blog" class="nav__link">Blog</a></li>
-        </ul>
-      </nav>
-      <a href="tel:+380961111111" class="header__link">
-        <svg class="header__icon">
-          <use href="./images/symbol-defs.svg#icon-tel"></use>
-        </svg>
-      </a>
-      <button
-        class="mobile-menu__btn hamburger hamburger--collapse js-open-menu is-open js-close-menu"
-        type="button"
-        aria-expanded="false"
-        aria-controls="mobile-menu"
-      >
-        <span class="hamburger-box">
-          <span class="hamburger-inner"></span>
-        </span>
-      </button>
-    </div>
+  <div class="container header__wrapper">
+    <button
+      class="mobile-menu__btn hamburger hamburger--collapse js-open-menu"
+      type="button"
+      aria-expanded="false"
+      aria-controls="mobile-menu"
+    >
+      <span class="hamburger-box">
+        <span class="hamburger-inner"></span>
+      </span>
+    </button>
+    <a href="./index.html" class="logo">
+      <svg class="logo__icon">
+        <use href="./images/symbol-defs.svg#icon-Logo"></use>
+      </svg>
+    </a>
+    <nav class="navigation">
+      <ul class="nav__list list">
+        <li class="nav__item">
+          <a href="#hero" class="nav__link">Anemone</a>
+        </li>
+        <li class="nav__item">
+          <a href="#about-us" class="nav__link">About us</a>
+        </li>
+        <li class="nav__item">
+          <a href="#store" class="nav__link">Store</a>
+        </li>
+        <li class="nav__item">
+          <a href="#delivery" class="nav__link">Delivery</a>
+        </li>
+        <li class="nav__item">
+          <a href="#blog" class="nav__link">Blog</a>
+        </li>
+      </ul>
+    </nav>
+    <a href="tel:+380961111111" class="header__link">
+      <svg class="header__icon">
+        <use href="./images/symbol-defs.svg#icon-tel"></use>
+      </svg>
+    </a>
   </div>
 </header>
-
-<!-- <button class="header__button  js-open-menu is-open" type="button"
-            aria-expanded="false"
-            aria-controls="mobile-menu">
-                <svg class="header__burger">
-                    <use href="./images/symbol-defs.svg#icon-Burger"></use>
-                </svg>
-            </button> -->
-            <!-- id="about-us"
-            id="store"
-            id="delivery"
-            id="blog" -->
