--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,96 +1,119 @@
-
 .header {
-    padding-top: 16px;
+  width: 100vw;
+  min-height: 60px;
+  padding-top: 16px;
+  background-color: var(--white-cl);
+  position: sticky;
+  top: 0;
+  z-index: 1000;
 
+  &:has(.mobile-menu__btn.is-active) {
+    background-color: transparent;
+  }
+}
+
+.logo {
+    .mobile-menu__btn.is-active ~ & {
+        opacity: 0;
+    }
 }
 
 .logo__icon {
-    width: 54px;
-    height: 42px;
-    margin-right: 5px;
+  width: 54px;
+  height: 42px;
+  margin-right: 5px;
 
-    @include mq(tablet) {
-        width: 86px;
-        height: 68px;
-    }
+  @include mq(tablet) {
+    width: 86px;
+    height: 68px;
+  }
 }
 
-
-
 .header__wrapper {
-    position: relative;
-    width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    @include mq(tablet) {
-        align-items: center;
-    }
+  // position: relative;
+  width: 100%;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  @include mq(tablet) {
+    align-items: center;
+  }
 }
 
 .header__link {
-    padding-top: 3px;
-    margin-left: auto;
+  padding-top: 3px;
+  margin-left: auto;
 
-    @include mq(tablet) {
-        margin-left: 0;
-    }
+  @include mq(tablet) {
+    margin-left: 0;
+  }
+
+  .mobile-menu__btn.is-active ~ & {
+    opacity: 0;
+}
 }
 
 .header__icon {
-    width: 25px;
-    height: 25px;
-    margin-left: auto;
-    margin-right: 40px;
+  width: 25px;
+  height: 25px;
+  margin-left: auto;
+  margin-right: 40px;
 }
 
 .navigation {
-    display: none;
+  display: none;
 
-    @include mq(tablet) {
+  @include mq(tablet) {
     display: block;
-    }
+  }
 }
 
 .nav__list {
-    display: flex;
+  display: flex;
 
-    @include mq(tablet) {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        gap: 24px;
-    }
-    
-    @include mq(desktop) {
-        gap: 48px;
-    }
+  @include mq(tablet) {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 24px;
+  }
+
+  @include mq(desktop) {
+    gap: 48px;
+  }
 }
 
 .nav__link {
-    padding-top: 16px;
-    padding-bottom: 17px;
-    text-decoration: none;
-    @include fonts($fw: 400, $fs: 20px);
+  padding-top: 16px;
+  padding-bottom: 17px;
+  text-decoration: none;
+  @include fonts($fw: 400, $fs: 20px);
 
-    @include mq(tablet) {
-        padding-top: 12px;
-        padding-bottom: 21px;
-    }
+  @include mq(tablet) {
+    padding-top: 12px;
+    padding-bottom: 21px;
+  }
 }
 
-.header__button {
-    display: block;
-    margin-left: 14px;
-    padding: 0;
-    background-color: transparent;
-    border: none;
-    @include mq(tablet) {
-        display: none;
-    }
-}
+// .mobile-menu__btn {
+//     position: absolute;
+//     top: 20px;
+//     right: 24px;
+//     z-index: 9999;
+// }
 
-.header__burger {
-    width: 24px;
-    height: 24px;
-}
+// .header__button {
+//     display: block;
+//     margin-left: 14px;
+//     padding: 0;
+//     background-color: transparent;
+//     border: none;
+//     @include mq(tablet) {
+//         display: none;
+//     }
+// }
+
+// .header__burger {
+//     width: 24px;
+//     height: 24px;
+// }
