--- a/src/sass/components/_mobile-menu.scss
+++ b/src/sass/components/_mobile-menu.scss
@@ -9,7 +9,7 @@
 
     background-color: var(--default-btn-cl);
     color: var(--white-cl);
-    z-index: 999;
+
 	display: flex;
 	flex-direction: column;
     transform: translateX(-150%);
@@ -24,12 +24,12 @@
 
 .mobile-menu__btn {
     position: absolute;
-    top: 2px;
-    right: 0;
+    top: 20px;
+    right: 24px;
     padding: 0;
-	background-color: transparent;
-	cursor: pointer;
-	border: none;
+	// background-color: transparent;
+	// cursor: pointer;
+	// border: none;
     z-index: 999;
 
 }
