Add hero html + scc

--- a/src/partials/modal-contact-us.html
+++ b/src/partials/modal-contact-us.html
@@ -4,9 +4,9 @@
     <form class="modal__form" autocomplete="on">
       <b>Contact us</b>
       <p>
-        If you have any additional questions or you want to clarify
-        something before you make an order please fill in your contact
-        details. We will call you back.
+        If you have any additional questions or you want to clarify something
+        before you make an order please fill in your contact details. We will
+        call you back.
       </p>
       <label class="form__label">
         <span>Name</span>
@@ -14,7 +14,6 @@
           type="text"
           class="form__input"
           required
-          autofocus
           placeholder="Your name"
         />
       </label>
