correct about section

--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -28,12 +28,8 @@
 }
 
 .about__text {
-  margin-bottom: 16px;
-  font-family: 'Montserrat';
-  font-style: normal;
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.25;
+  margin-bottom: 36px;
+  @include fonts($fw: 400, $fs: 16px, $lh: 1.25);
 
   @include mq(tablet) {
     font-size: 20px;
